# HAMRadio-Telegram_Bot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.alpine  README.md  bot.py  chromedriver_installation.sh  data_centralisation.py  docker-compose.yaml  gridsEU.txt  logging_config.py  main.py  pyproject.toml  requirements.txt  start_bot.sh
res/: callbook.csv
src/: bot.py  check_for_signal.py  data_centralisation.py  logging_config.py
