[project]
name = "hamradio-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "aiohttp-sse-client>=0.2.1",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pandas>=3.0.0",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "webdriver-manager>=4.0.2",
]
